--- a/SuperHeroSights/src/main/resources/templates/editSighting.html
+++ b/SuperHeroSights/src/main/resources/templates/editSighting.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">        <link rel="stylesheet" href="style.css" />
         <title>Superhero Sightings</title>
     </head>
     <body>
         <!-- Main Body of Page -->
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
+
         <div class="container">
             <div class="row m-4">
                 <div class="col text-center border border-dark">
@@ -47,9 +50,10 @@
                             <div class="col-9">
                                 <select id="hero" name="heroId" 
                                         class="form-control" >
-                                    <option th:each="hero : ${heroes}" 
-                                            th:value="${hero.heroId}" 
-                                            th:text="${hero.name}">
+                                    <option th:each="hero : ${heroes}"
+                                            th:value="${hero.heroId}"
+                                            th:text="${hero.name}"
+                                            th:selected="${sighting.hero.heroId == hero.heroId}">
                                         Hero</option>
                                 </select>
                             </div>
@@ -62,7 +66,8 @@
                                         class="form-control" >
                                     <option th:each="location : ${locations}" 
                                             th:value="${location.id}" 
-                                            th:text="${location.name}">
+                                            th:text="${location.name}"
+                                            th:selected="${sighting.location.id == location.id}">
                                         Location</option>
                                 </select>
                             </div>
@@ -72,9 +77,10 @@
                                 Date</label>
                             <div class="col-9">
                                 <input type="text" name="dateSighted" 
-                                       id="date" class="form-control" placeholder="YYYY/MM/DD"/>
+                                       id="date" class="form-control" th:value="${sighting.dateSighted}"/>
                             </div>
                         </div>
+                        <input type="hidden" name="sightingId" th:value="${sighting.id}"/>
                         <button type="submit" class="btn btn-primary">Edit Sighting</button>
                     </form>
                 </div>
