--- a/SuperHeroSights/src/main/resources/templates/editlocation.html
+++ b/SuperHeroSights/src/main/resources/templates/editlocation.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">        <link rel="stylesheet" href="style.css" />
         <title>Superhero Sightings</title>
     </head>
     <body>
         <!-- Main Body of Page -->
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
+
         <div class="container">
             <div class="row m-4">
                 <div class="col text-center border border-dark">
@@ -45,7 +48,7 @@
                             <label for="name" class="col-3 col-form-label">
                                 Location Name</label>
                             <div class="col-9">
-                                <input type="text" name="name" 
+                                <input type="text" name="name"
                                        id="name" class="form-control"
                                        th:value="${location.name}"/>
                             </div>
@@ -54,7 +57,7 @@
                             <label for="description" class="col-3 col-form-label">
                                 Description</label>
                             <div class="col-9">
-                                <input type="text" name="description" 
+                                <input type="text" name="description"
                                        id="description" class="form-control"
                                        th:value="${location.description}"/>
                             </div>
@@ -63,7 +66,7 @@
                             <label for="address" class="col-3 col-form-label">
                                 Address</label>
                             <div class="col-9">
-                                <input type="text" name="address" 
+                                <input type="text" name="address"
                                        id="address" class="form-control"
                                        th:value="${location.address}"/>
                             </div>
@@ -72,7 +75,7 @@
                             <label for="longitude" class="col-3 col-form-label">
                                 Longitude</label>
                             <div class="col-9">
-                                <input type="text" name="longitude" 
+                                <input type="text" name="longitude"
                                        id="longitude" class="form-control"
                                        th:value="${location.longitude}"/>
                             </div>
@@ -81,7 +84,7 @@
                             <label for="latitude" class="col-3 col-form-label">
                                 Latitude</label>
                             <div class="col-9">
-                                <input type="text" name="latitude" 
+                                <input type="text" name="latitude"
                                        id="latitude" class="form-control"
                                        th:value="${location.latitude}"/>
                             </div>
@@ -96,6 +99,25 @@
         <!-- End main body -->
 
         <!-- Optional JavaScript -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIoUt1VIPpXq7njD4WxY50CpxcZzOjTzI&libraries=places"></script>
+        <script type="text/javascript">
+                    google.maps.event.addDomListener(window, 'load', intilize);
+                    function intilize(){
+                        var autocomplete = new google.maps.places.Autocomplete(document.getElementById('address'));
+
+                        google.maps.event.addListener(autocomplete, 'place_changed', function() {
+
+                            var places = autocomplete.getPlace();
+                            var address = places.formatted_address;
+                            var latitude = places.geometry.location.lat();
+                            var longitude = places.geometry.location.lng();
+
+                            document.getElementById('address').innerHTML = address;
+                            document.getElementById('latitude').value = latitude;
+                            document.getElementById('longitude').value = longitude;
+                        });
+                    };
+                </script>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
