--- a/SuperHeroSights/src/main/resources/templates/hero.html
+++ b/SuperHeroSights/src/main/resources/templates/hero.html
@@ -6,12 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css" />
         <title>Hero Page</title>
     </head>
     <body>
         <!-- Main Body of Page -->
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
+
         <div class="container">
             <div class="row m-4">
                 <div class="col text-center border border-dark">
@@ -59,7 +63,7 @@
                         </div>
                         <div class="form-group row">
                             <label for="superpower" class="col-3 col-form-label">
-                                Superpower</label>
+                                Super Power</label>
                             <div class="col-9">
                                 <select id="superpower" name="superpowerId" 
                                         class="form-control" >
@@ -79,17 +83,17 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Hero Name</th>
-                                <th>Description</th>
-                                <th>SuperPower</th>
-                                <th>Edit</th>
-                                <th>Delete</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Hero Name</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Super Power</th>
+                                <th scope="col">Edit</th>
+                                <th scope="col">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr th:each="currentHero : ${heroes}">
-                                <td th:text="${currentHero.heroId}">Hero ID</td>
+                                <th scope="row" th:text="${currentHero.heroId}">Hero ID</th>
                                 <td th:text="${currentHero.name}">Hero Name</td>
                                 <td th:text="${currentHero.description}">Description</td>
                                 <td th:text="${currentHero.power.name}">SuperPower</td>
