--- a/SuperHeroSights/src/main/resources/templates/organization.html
+++ b/SuperHeroSights/src/main/resources/templates/organization.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">        <link rel="stylesheet" href="style.css" />
         <title>Superhero Sightings</title>
     </head>
     <body>
         <!-- Main Body of Page -->
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
+
         <div class="container">
             <div class="row m-4">
                 <div class="col text-center border border-dark">
@@ -95,17 +98,17 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Phone</th>
-                                <th>Details</th>
-                                <th>Edit</th>
-                                <th>Delete</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Phone</th>
+                                <th scope="col">Details</th>
+                                <th scope="col">Edit</th>
+                                <th scope="col">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr th:each="organization : ${organizations}">
-                                <td th:text="${organization.id}">Organization ID</td>
+                                <th scope="row" th:text="${organization.id}">Organization ID</th>
                                 <td th:text='${organization.name}'>Organization Name</td>
                                 <td th:text="${organization.phone}">Organization Phone</td>
                                 <td><a href="#" th:href="@{/organizationDetail(id=${organization.id})}">Details</a></td>
@@ -120,6 +123,21 @@
         <!-- End main body -->
 
         <!-- Optional JavaScript -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIoUt1VIPpXq7njD4WxY50CpxcZzOjTzI&libraries=places"></script>
+        <script type="text/javascript">
+                    google.maps.event.addDomListener(window, 'load', intilize);
+                    function intilize(){
+                        var autocomplete = new google.maps.places.Autocomplete(document.getElementById('address'));
+
+                        google.maps.event.addListener(autocomplete, 'place_changed', function() {
+
+                            var places = autocomplete.getPlace();
+                            var address = places.formatted_address;
+
+                            document.getElementById('address').innerHTML = address;
+                        });
+                    };
+        </script>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
