--- a/SuperHeroSights/src/main/resources/templates/superpower.html
+++ b/SuperHeroSights/src/main/resources/templates/superpower.html
@@ -6,12 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="style.css" />
         <title>SuperPower Page</title>
     </head>
     <body>
         <!-- Main Body of Page -->
+        <div id='stars'></div>
+        <div id='stars2'></div>
+        <div id='stars3'></div>
+
         <div class="container">
             <div class="row m-4">
                 <div class="col text-center border border-dark">
@@ -58,15 +62,15 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Superpower Name</th>
-                                <th>Edit</th>
-                                <th>Delete</th>
+                                <th scope="col">ID</th>
+                                <th scope="col">Superpower Name</th>
+                                <th scope="col">Edit</th>
+                                <th scope="col">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr th:each="currentPower : ${superpowers}">
-                                <td th:text="${currentPower.superpowerId}">Superpower ID</td>
+                                <th scope="row" th:text="${currentPower.superpowerId}">Superpower ID</th>
                                 <td th:text="${currentPower.name}">Superpower Name</td>                                                               
                                 <td><a href="#" th:href="@{/editSuperpower(id=${currentPower.superpowerId})}">Edit</a></td>
                                 <td><a href="#" th:href="@{/deleteSuperpower(id=${currentPower.superpowerId})}">Delete</a></td>
