--- a/SuperHeroSights/src/main/resources/templates/sighting.html
+++ b/SuperHeroSights/src/main/resources/templates/sighting.html
@@ -16,29 +16,29 @@
         <div id='stars3'></div>
 
         <div class="container">
-            <div class="row m-4">
-                <div class="col text-center border border-dark">
+            <div class="row">
+                <div class="col text-center m-4">
                     <h1>Superhero Sightings</h1>
                 </div>
             </div>
-            <div class="row m-4 border border-dark">
-                <div class="col text-center m-3">
+            <div class="row m-2">
+                <div class="col text-center m-2">
                     <a href="hero" class="btn btn-outline-primary btn-lg">Hero</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="superpower" class="btn btn-outline-primary btn-lg">SuperPower</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="location" class="btn btn-outline-primary btn-lg">Location</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="sighting" class="btn btn-outline-primary btn-lg">Sighting</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="organization" class="btn btn-outline-primary btn-lg">Organization</a>
                 </div>
             </div>
-            <div class="row m-4 border border-dark">
+            <div class="row">
                 <div class="col-3 text-center m-3">
                     <span class="h3">Add Sighting</span>
                 </div>
@@ -75,14 +75,14 @@
                                 Date</label>
                             <div class="col-9">
                                 <input type="text" name="dateSighted" 
-                                       id="date" class="form-control" placeholder="YYYY/MM/DD"/>
+                                       id="date" class="form-control" placeholder="MM/DD/YYYY"/>
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Add Sighting</button>
                     </form>
                 </div>
             </div>
-            <div class="row m-4 border border-dark">
+            <div class="row">
                 <div class="col text-center m-3">
                     <table class="table table-striped">
                         <thead>
