--- a/SuperHeroSights/src/main/resources/templates/superpower.html
+++ b/SuperHeroSights/src/main/resources/templates/superpower.html
@@ -8,7 +8,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css" />
-        <title>SuperPower Page</title>
+        <title>Super Power Page</title>
     </head>
     <body>
         <!-- Main Body of Page -->
@@ -17,61 +17,61 @@
         <div id='stars3'></div>
 
         <div class="container">
-            <div class="row m-4">
-                <div class="col text-center border border-dark">
+            <div class="row">
+                <div class="col text-center m-4">
                     <h1>Superhero Sightings</h1>
                 </div>
             </div>
-            <div class="row m-4 border border-dark">
-                <div class="col text-center m-3">
+            <div class="row m-2">
+                <div class="col text-center m-2">
                     <a href="hero" class="btn btn-outline-primary btn-lg">Hero</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="superpower" class="btn btn-outline-primary btn-lg">SuperPower</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="location" class="btn btn-outline-primary btn-lg">Location</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="sighting" class="btn btn-outline-primary btn-lg">Sighting</a>
                 </div>
-                <div class="col text-center m-3">
+                <div class="col text-center m-2">
                     <a href="organization" class="btn btn-outline-primary btn-lg">Organization</a>
                 </div>
             </div>
-            <div class="row m-4 border border-dark">
+            <div class="row">
                 <div class="col-3 text-center m-3">
-                    <span class="h3">Add Superpower</span>
+                    <span class="h3">Add Super Power</span>
                 </div>
-                <div class="col-7 text-center m-3">
+                <div class="col-12 text-center m-3">
                     <form action="addSuperpower" method="POST">
                         <div class="form-group row">
                             <label for="name" class="col-3 col-form-label">
-                                Superpower Name</label>
-                            <div class="col-9">
+                                Super Power Name</label>
+                            <div class="col-4">
                                 <input type="text" name="name"
-                                       id="name" class="form-control"/>
+                                       id="name" class="form-control" required/>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Add Superpower</button>
+                        <button type="submit" class="btn btn-primary">Add Super Power</button>
                     </form>
                 </div>
             </div>
-            <div class="row m-4 border border-dark">
+            <div class="row">
                 <div class="col text-center m-3">
                     <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">ID</th>
-                                <th scope="col">Superpower Name</th>
+                                <th scope="col">Super Power Name</th>
                                 <th scope="col">Edit</th>
                                 <th scope="col">Delete</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr th:each="currentPower : ${superpowers}">
-                                <th scope="row" th:text="${currentPower.superpowerId}">Superpower ID</th>
-                                <td th:text="${currentPower.name}">Superpower Name</td>                                                               
+                                <th scope="row" th:text="${currentPower.superpowerId}">Super Power ID</th>
+                                <td th:text="${currentPower.name}">Super Power Name</td>                                                               
                                 <td><a href="#" th:href="@{/editSuperpower(id=${currentPower.superpowerId})}">Edit</a></td>
                                 <td><a href="#" th:href="@{/deleteSuperpower(id=${currentPower.superpowerId})}">Delete</a></td>
                             </tr>
